--- a/project/static/css/player.css
+++ b/project/static/css/player.css
@@ -17,17 +17,6 @@ body {
   min-height: 100%;
 }
 
-#overlay-presents {
-  z-index: 4;
-  position: absolute;
-  text-align: left;
-  top: 0;
-  left: 1%;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: rgb(38, 250, 119);
-  font-size: 20px;
-}
-
 #overlay-singing {
   z-index: 2;
   position: absolute;
@@ -74,9 +63,26 @@ body {
 
 #splashImage {
   z-index: 3;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
+
+#overlay-presents {
+  z-index: 4;
+  position: absolute;
+  text-align: left;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgb(38, 250, 119);
+  font-size: 20px;
+  cursor: pointer;
+}
+
