--- a/project/static/css/player.css
+++ b/project/static/css/player.css
@@ -23,8 +23,8 @@ body {
   text-align: left;
   top: 0;
   left: 1%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: rgb(38, 250, 119);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: rgb(238, 234, 6);
   font-size: 20px;
 }
 
@@ -34,8 +34,8 @@ body {
   text-align: left;
   top: 0;
   left: 7%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: rgb(38, 250, 119);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: rgb(255, 255, 255);
   font-size: 20px;
 }
 
@@ -45,8 +45,8 @@ body {
   text-align: left;
   bottom: 0;
   left: 1%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: rgb(248, 229, 59);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: rgb(38, 250, 119);
   font-size: 20px;
 }
 
@@ -56,8 +56,8 @@ body {
   text-align: left;
   bottom: 0;
   left: 7%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: rgb(248, 229, 59);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: rgb(255, 255, 255);
   font-size: 20px;
 }
 
@@ -70,19 +70,56 @@ body {
   height: 100%;
 }
 
+#overlay-singer {
+  z-index: 4;
+  position: absolute;
+  text-align: center;
+  top: 15%;
+  left: 0;
+  right: 0;
+  color: rgb(255, 255, 255);
+  font-size: 80px;
+}
+
+#overlay-music {
+  z-index: 4;
+  position: absolute;
+  text-align: center;
+  top: 35%;
+  left: 0;
+  right: 0;
+  color: rgb(38, 250, 119);
+  font-size: 40px;
+}
+
+#overlay-song {
+  z-index: 4;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 0;
+  right: 0;
+  color: rgb(238, 234, 6);
+  font-size: 60px;
+}
+
+#overlay-artist {
+  z-index: 4;
+  position: absolute;
+  text-align: center;
+  top: 65%;
+  left: 0;
+  right: 0;
+  color: rgb(238, 234, 6);
+  font-size: 60px;
+}
+
 #overlay-presents {
   z-index: 4;
   position: absolute;
-  text-align: left;
-  width: 100%;
-  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: rgb(38, 250, 119);
-  font-size: 20px;
-  cursor: pointer;
 }
-
