--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -14,7 +14,17 @@
             <label for="lastfm">LAST.FM API Key:&nbsp;&nbsp;</label>
             <input type="text" class="form-control" id="lastfm" name="lastfm" value="{{ config.lastfm }}">
             <a href="https://www.last.fm/login?next=%2Fapi%2Faccounts%3F_pjax%3D%2523content">&nbsp;&nbsp;Get API Key</a>
+            
         </div>
+        <div class="input-group">
+            <label for="updateratio">Screen update sec:</label>
+            <input type="text" class="form-control" id="updateratio" name="updateratio" value="{{ config.updateratio }}">
+        </div>
+        <div class="input-group">
+            <label for="songint">Song Interval:</label>
+            <input type="text" class="form-control" id="songint" name="songint" value="{{ config.songint }}">
+        </div>
+        
         <br>
         <button class="btn btn-outline-primary">Update</button>
     </form>
