--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -12,16 +12,12 @@
 
     var screenData
     var queueId = ''
-    var updateRatio = 1000
-    var songInterval = 10000
 
     async function getLatestInfo() {
       $.ajax({
         url: "/screenupdate",
         success: function (data) {
           screenData = data
-          updateRatio = screenData.updateRatio
-          songInterval = screenData.songInterval
           if (screenData.song === '') {
             $("#overlay-now").hide();
             $("#overlay-singing").hide();
@@ -42,7 +38,7 @@
         error: function (jqXHR, textStatus, errorThrown) {
         }
       });
-      await new Promise(resolve => setTimeout(resolve, updateRatio));
+      await new Promise(resolve => setTimeout(resolve, 1000));
       await getLatestInfo();
     }
 
@@ -68,7 +64,7 @@
           $("#overlay-song").text(screenData.song);
           $("#overlay-artist").text(screenData.artist);
 
-          await new Promise(resolve => setTimeout(resolve, songInterval));
+          await new Promise(resolve => setTimeout(resolve, 10000));
           await play_video();
         }
       }
