--- a/project/templates/library.html
+++ b/project/templates/library.html
@@ -48,7 +48,7 @@
                 </td>
                 <td>
                     <a href="{{ url_for('main.miniplayer', youtubeid=song.youtubeid) }}">
-                        <img src="/static/thumbs/{{ song.youtubeid }}.png'"   height="64" width="64">
+                        <img src="/static/thumbs/{{ song.youtubeid }}.jpg"   height="64" width="64">
                     </a>
                 </td>
                 <td>{{ song.artist }} - {{ song.name }}</td>
