--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -16,17 +16,20 @@
             <a href="https://www.last.fm/login?next=%2Fapi%2Faccounts%3F_pjax%3D%2523content">&nbsp;&nbsp;Get API Key</a>
             
         </div>
+        <br>
         <div class="input-group">
-            <label for="updateratio">Screen update sec:</label>
+            <label for="updateratio">Screen update sec:&nbsp;&nbsp;</label>
             <input type="text" class="form-control" id="updateratio" name="updateratio" value="{{ config.updateratio }}">
         </div>
+        <br>
         <div class="input-group">
-            <label for="songint">Song Interval:</label>
+            <label for="songint">Song Interval:&nbsp;&nbsp;</label>
             <input type="text" class="form-control" id="songint" name="songint" value="{{ config.songint }}">
         </div>
         
         <br>
         <button class="btn btn-outline-primary">Update</button>
     </form>
+    
 </div>
 {% endblock %}
