--- a/project/templates/queue.html
+++ b/project/templates/queue.html
@@ -3,6 +3,13 @@
 {% block content %}
 
 <div class="container mt-3">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="alert {{ messages[1] }}">
+        {{ messages[0] }}.
+    </div>
+    {% endif %}
+    {% endwith %}
     <table class="table">
         <thead>
             <tr>
