--- a/project/templates/library.html
+++ b/project/templates/library.html
@@ -36,22 +36,34 @@
                 <td></td>
                 <td>Video</td>
                 <td>Music</td>
+                {% if current_user.admin == "X" %}
+                <td></td>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
             {% for song in songs %}
             <tr>
                 <td>
-                    <a class="clickable-image" id="{{ song.youtubeid }}" href="{{ url_for('main.addqueue', youtubeid=song.youtubeid, userid=current_user.id) }}">
+                    <a class="clickable-image" id="{{ song.youtubeid }}"
+                        href="{{ url_for('main.addqueue', youtubeid=song.youtubeid, userid=current_user.id) }}">
                         <img src="{{ url_for('static', filename='images/icon-addlist.png') }}" height="24" width="24">
                     </a>
                 </td>
                 <td>
                     <a href="{{ url_for('main.miniplayer', youtubeid=song.youtubeid) }}">
-                        <img src="/static/thumbs/{{ song.youtubeid }}.jpg"   height="64" width="64">
+                        <img src="/static/thumbs/{{ song.youtubeid }}.jpg" height="64" width="64">
                     </a>
                 </td>
                 <td>{{ song.artist }} - {{ song.name }}</td>
+                {% if current_user.admin == "X" %}
+                <td>
+                    <a class="clickable-image" id="{{ song.youtubeid }}"
+                        href="{{ url_for('main.delsong', youtubeid=song.youtubeid) }}">
+                        <img src="{{ url_for('static', filename='images/icon-delete.png') }}" height="24" width="24">
+                    </a>
+                </td>
+                {% endif %}
             </tr>
             {% endfor %}
 
