--- a/project/templates/queue.html
+++ b/project/templates/queue.html
@@ -15,7 +15,7 @@
             <tr>
                 {% if current_user.roomadm == 'X' %}
                 <th></th>
-                {% endif #}
+                {% endif %}
                 <th>Singer</th>
                 <th>Music</th>
                 <th>Artist</th>
@@ -26,11 +26,11 @@
             <tr>
                 {% if current_user.roomadm == 'X' %}
                 <td>
-                    <a class="clickable-image" id="{{ queue_item.id }}" href="{{ url_for('main.delqueue', queueid=queue_item.id }}">
+                    <a class="clickable-image" id="{{ queue_item.id }}" href="{{ url_for('main.delqueue', queueid=queue_item.id) }}">
                         <img src="{{ url_for('static', filename='images/icon-delete.png') }}" height="24" width="24">
                     </a>
                 </td>
-                {% endif #}
+                {% endif %}
                 <td>{{ queue_item.singer }}
                 </td>
                 <td>{{ queue_item.song }}</td>
