--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 <div class="container mt-3">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="alert {{ messages[1] }}">
+        {{ messages[0] }}.
+    </div>
+    {% endif %}
+    {% endwith %}
     {% if user.name %}
     <h3 class="title">
         Hello, {{ current_user.name }} !
@@ -9,7 +16,11 @@
     {% else %}
     <h3 class="title">
         Login first !
-    </h3>    
+    </h3>
     {% endif %}
+</div>
+<br>
+<div class="container mt-3">
+
 </div>
 {% endblock %}
