--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -20,7 +20,30 @@
     {% endif %}
 </div>
 <br>
+{% if user.roomadm == "X" %}
 <div class="container mt-3">
-
+    <div class="row">
+        <div class="col-2">
+            <a href="{{ url_for('main.setcommand', command='prev') }}">
+                <img src="{{ url_for('static', filename='images/icon-previous.png') }}" height="64" width="64">
+            </a>
+        </div>
+        <div class="col-2">
+            <a href="{{ url_for('main.setcommand', command='play') }}">
+                <img src="{{ url_for('static', filename='images/icon-play.png') }}" height="64" width="64">
+            </a>
+        </div>
+        <div class="col-2">
+            <a href="{{ url_for('main.setcommand', command='pause') }}">
+                <img src="{{ url_for('static', filename='images/icon-pause.png') }}" height="64" width="64">
+            </a>
+        </div>
+        <div class="col-2">
+            <a href="{{ url_for('main.setcommand', command='next') }}">
+                <img src="{{ url_for('static', filename='images/icon-next.png') }}" height="64" width="64">
+            </a>
+        </div>
+    </div>
 </div>
+{% endif %}
 {% endblock %}
