--- a/project/templates/musicdb.html
+++ b/project/templates/musicdb.html
@@ -12,15 +12,15 @@
             </tr>
         </thead>
         <tbody>
-            {% for lastfml in lastfm %}
+            {% for music in musics %}
             <tr>
                 <td>
-                    <a href="{{ url_for('main.youtube', artist=lastfml['artist'], song=lastfml['song']) }}">
+                    <a href="{{ url_for('main.youtube', artist=music.artist, song=music.song) }}">
                         <img src="{{ url_for('static', filename='images/icon-search.png') }}" height="24" width="24">
                     </a>
                 </td>
-                <td>{{ lastfml["artist"] }}</td>
-                <td>{{ lastfml["song"] }}</td>
+                <td>{{ music.artist }}</td>
+                <td>{{ music.song }}</td>
             </tr>
             {% endfor %}
         </tbody>
