--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -116,13 +116,13 @@
 
   <div id="overlay-presents"></div>
   <div id="overlay-singer"></div>
-  <div id="overlay-music">Now:</div>
+  <div id="overlay-music">Singing:</div>
   <div id="overlay-song"></div>
   <div id="overlay-artist"></div>
   <img id="splashImage" src="{{ url_for('static', filename='images/karatube_background1.jpg') }}"
     alt="Video Placeholder">
   <video id="video" src="" controls autoplay playsinline></video>
-  <div id="overlay-singing"> Singing: </div>
+  <div id="overlay-singing"> Now: </div>
   <div id="overlay-now"></div>
   <div id="overlay-next"> Next: </div>
   <div id="overlay-queued"></div>
