--- a/project/templates/youtube.html
+++ b/project/templates/youtube.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block headscript %}
-
+<script>
+    var clicked = false;
+</script>
 {% endblock %}
 
 {% block content %}
@@ -20,7 +22,7 @@
             <tr>
                 <td>
                     <a
-                        href="{{ url_for('main.youtubedl', artist=artist, song=song, id=video['id'], image=video['image'], description=video['description']) }}">
+                        href="#" data-variable1="{{ artist }} " data-variable2="{{ song }}" data-variable3="{{ video['id'] }}" data-variable4="{{ video['image'] }}" data-variable5="{{ singer }}">
                         <img src="{{ url_for('static', filename='images/icon-download.png') }}" height="24" width="24">
                     </a>
                 </td>
@@ -37,5 +39,36 @@
     </table>
     </table>
 </div>
+
+<script>
+    const links = document.querySelectorAll('a[data-variable1]');
+
+    links.forEach(link => {
+      link.addEventListener('click', (event) => {  
+        if (clicked === true) {
+            event.preventDefault();
+        } else {
+            clicked = true;
+        }
+        try {
+          const variableData = {};
+          for (const attribute of link.attributes) {
+            if (attribute.name.startsWith('data-variable')) {
+              const variableName = attribute.name.slice(13);
+              variableData[variableName] = attribute.value;
+            }
+          }
+          const dynamicUrl = buildDynamicUrl(variableData[1], variableData[2], variableData[3], variableData[4], variableData[5]);
+          link.href = dynamicUrl;
+        } catch (error) {
+          
+        }
+      });
+    });
+    
+    function buildDynamicUrl(variable1, variable2, variable3, variable4, variable5) {
+      return `/youtubedl/${variable1}/${variable2}/${variable3}/${variable4}/${variable5}`;  // Replace with your base URL and path
+    }
+</script>
 
 {% endblock %}
