--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -34,19 +34,21 @@
                     {% endif %}
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.queue') }}">Queue</a>
+                        <a class="nav-link" href="{{ url_for('main.library') }}">Library</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.library') }}">Library</a>
+                        <a class="nav-link" href="{{ url_for('main.queue') }}">Queue</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
                     </li>
                     {% if current_user.roomadm == 'X' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.player') }}">Player</a>
+                        <a class="nav-link" href="{{ url_for('main.roomcontrol') }}">Room</a>
                     </li>
-                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.player') }}">Player</a>
+                    </li> {% endif %}
                     {% if current_user.admin == 'X' %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.configuration') }}">Configuration</a>
