--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -53,6 +53,9 @@
             if (screenData.command === "pause") {
               karaokeVideo.pause();
             }
+            if (screenData.command === "vol") {
+              karaokeVideo.volume = screenData.commvalue;
+            }
           }
         },
         error: function (jqXHR, textStatus, errorThrown) {
@@ -121,7 +124,7 @@
   <div id="overlay-artist"></div>
   <img id="splashImage" src="{{ url_for('static', filename='images/karatube_background1.jpg') }}"
     alt="Video Placeholder">
-  <video id="video" src="" controls autoplay playsinline></video>
+  <video id="video" src="" autoplay playsinline></video>
   <div id="overlay-singing"> Now: </div>
   <div id="overlay-now"></div>
   <div id="overlay-next"> Next: </div>
