--- a/project/templates/room.html
+++ b/project/templates/room.html
@@ -39,24 +39,32 @@
             </a>
         </div>
         <div class="row">
-            <div class="col-3">
+            <div class="col-2">
                 <img src="{{ url_for('static', filename='images/icon-volumedown.png') }}" height="48" width="48">
             </div>
-            <div class="col-6">
-                <input type="range" id="volume-control" min="0" max="1" step="0.01" value="0.85">
+            <div class="col-8">
+                <input type="range" id="volume-control" min="0" max="1" step="0.01" value="1">
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 <img src="{{ url_for('static', filename='images/icon-volumeup.png') }}" height="48" width="48">
             </div>
         </div>
     </div>
 </div>
 <script>
-    const video = document.getElementById('video');
-    const volumeControl = document.getElementById('volume-control');
+    const rangeElement = document.getElementById('volume-control');
 
-    volumeControl.addEventListener('change', function() {
-        video.volume = this.value;
+    rangeElement.addEventListener('change', async () => {
+        const value = rangeElement.value;
+
+        try {
+            const response = await fetch('/volumechange', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ rangeValue: value })
+            });
+        } catch (error) {
+        }
     });
 </script>
 {% endif %}
