--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -5,7 +5,7 @@
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <div class="alert {{ messages[1] }}">
-        {{ messages[0] }}.
+        {{ messages[0] }}
     </div>
     {% endif %}
     {% endwith %}
