--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -19,24 +19,8 @@
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
         <div class="mb-3">
-            <label for="roomid">Room:</label>
-            {% if urlroom %}
-            <input type="text" class="form-control" id="roomid" name="roomid" value="{{ urlroom }}" required>
-            {% else %}
-            <input type="text" class="form-control" id="roomid" name="roomid" required>
-            {% endif %}
-        </div>
-        <div class="mb-3">
-            <label for="roompass">Room Password:</label>
-            {% if urlroompass %}
-            <input type="password" class="form-control" id="roompass" name="roompass" value="{{ urlroompass }}" required>
-            {% else %}
-            <input type="password" class="form-control" id="roompass" name="roompass" required>
-            {% endif %}
-        </div>
-        <div class="mb-3">
             <label class="checkbox">
-                <input type="checkbox" name="remember">
+                <input type="checkbox" name="remember" checked>
                 Remember me
             </label>
         </div>
