--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -129,6 +129,9 @@
   <div id="overlay-now"></div>
   <div id="overlay-next"> Next: </div>
   <div id="overlay-queued"></div>
+  <div id="overlay-qrcode">
+    <img id="qrCode" src="data:image/png;base64,{{ base64_img }}">
+  </div>
 
   <script>
     const video = document.getElementById("video");
